--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p>I am a prospective web developer, in search of a new career. I am currently spending most of my time off from working in a coffee-shop expanding my knowledge in web development</p>
 <h2>Skills/Qualifications</h2>
   <p><em>I don't have</em> a degree in computer science!</p>
-  <p><em>Diploma of higher eduction in computer science</em> equivalent to the first two years of university - from the OU (Open University)</p>
+  <p><em>Diploma of higher education in computer science</em> equivalent to the first two years of university - from the OU (Open University)</p>
   <p><em>Java-script,</em> Able to utilise higher order functions ( i.e. reduce() ), it's strange OOP and the new ES6 features - whilst being wary how function breaks JQuery's $(this)</p>
   <p><em>HTML5 and CSS3,</em> grid, flex-box, media-queries (try resizing this page<span id="egg"></span>)and new HTML tags.</p>
   <p><em>JQuery</em>, although I can live without it thanks to HTML5</p>
