Added placeholder for react

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
       <p>An early JavaScript/DOM project of mine with minimal CSS and HTML</p>
     </figure>
   </div>
+  <div class="card">
+    <figure>
+      <a href="https://joeeeeeeeeeeeee.github.io/my-app/">
+        <img src="assets/images/placeholder.png">
+      </a>
+      <figcaption>First React.js project hosted</figcaption>
+      <p>This is just to show I've gotten React.JS running and am able to host it on GitHub. It is part of the official react.js tutorial</p>
+    </figure>
+  </div>
 <div>
 
 
