--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <p><em>Git</em> version control via the command-line or via plug-ins to IDEs.</p>
   <p><em>Gimp, image manipulation</em>. Because Photoshop is expensive</p>
   <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
+  <p><em>React.js</em>Currently learning and really enjoying<p>
 <h2>Knowledge I have known that has become ever so rusty due to lack of use</h2>
-  <p><em>PHP with SQL</em>, OU, I am in the process of relearning this - worried about it being a pigeon-hole (perhaps is should learn react.js instead?)</p>
+  <p><em>PHP with SQL</em></p>
   <p><em>Python</em>, OU. Algorithms and data structures,</p>
   <p><em>Java and Netbeans</em>, OU. My first language! OOP and the full development cycle</p>
   <p><em>XHTML</em>, OU.</p>
