added a react project

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 <div class="card_grid">
   <div class="card">
     <figure>
+      <a href="https://joeeeeeeeeeeeee.github.io/react_sketch/">
+        <img src="assets/images/react_sketch.png">
+      </a>
+      <figcaption>React Sketch</figcaption>
+      <p>This is a version of Etch-a-Sketch built with the framework React.JS</p>
+    </figure>
+  </div>
+  <div class="card">
+    <figure>
       <a href="https://joeeeeeeeeeeeee.github.io/lightbox/">
         <img src="assets/images/lightbox.jpg">
       </a>
@@ -80,24 +89,6 @@
       </a>
       <figcaption>Tic-Tac-Toe (live)</figcaption>
       <p>An OOP command-line version of Tic-tac-toe in Ruby.</p>
-    </figure>
-  </div>
-  <div class="card">
-    <figure>
-      <a href="https://joeeeeeeeeeeeee.github.io/etch-a-sketch/">
-        <img src="assets/images/etch_a_sketch.png">
-      </a>
-      <figcaption>Etch-a-Sketch</figcaption>
-      <p>An early JavaScript/DOM project of mine with minimal CSS and HTML</p>
-    </figure>
-  </div>
-  <div class="card">
-    <figure>
-      <a href="https://joeeeeeeeeeeeee.github.io/my-app/">
-        <img src="assets/images/placeholder.png">
-      </a>
-      <figcaption>First React.js project hosted</figcaption>
-      <p>This is just to show I've gotten React.JS running and am able to host it on GitHub. It is part of the official react.js tutorial</p>
     </figure>
   </div>
 <div>
