--- a/index.html
+++ b/index.html
@@ -2,96 +2,125 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joe Weston</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Joe Weston</title>
+  <link rel="shortcut icon" href="assets/images/logo.png">
   <link rel="stylesheet" href="assets/stylesheets/reset.css">
   <link rel="stylesheet" href="assets/stylesheets/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <h1>Joe Weston</h1>
-  <p class="h1_subtext">Web Developer at the "get foot in door" stage of his career</p>
-<h2>A little about Me:</h2>
-  <p>I am a prospective web developer, in search of a new career. I am currently spending most of my time off from working in a coffee-shop expanding my knowledge in web development</p>
-<h2>Skills/Qualifications</h2>
-  <p><em>I don't have</em> a degree in computer science!</p>
-  <p><em>Diploma of higher education in computer science</em> equivalent to the first two years of university - from the OU (Open University)</p>
-  <p><em>Java-script,</em> Able to utilise higher order functions ( i.e. reduce() ), it's strange OOP and the new ES6 features - whilst being wary how function breaks JQuery's $(this)</p>
-  <p><em>HTML5 and CSS3,</em> grid, flex-box, media-queries (try resizing this page<span id="egg"></span>)and new HTML tags.</p>
-  <p><em>JQuery</em>, although I can live without it thanks to HTML5</p>
-  <p><em>Ruby</em>, Same knowledge as JS. I have also used it with the Rails MVC framework along with postgreSQL - although the lack of Junior Ruby roles has put me off this route. I wouldn't call myself a back-end developer yet though, the SQL exposure is minimal with this framework and I'm not actively using Rails.</p>
-  <p><em>Git</em> version control via the command-line or via plug-ins to IDEs.</p>
-  <p><em>Gimp, image manipulation</em>. Because Photoshop is expensive</p>
-  <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
-  <p><em>React.js</em> Currently learning and really enjoying<p>
-<h2>Knowledge I have known that has become ever so rusty due to lack of use</h2>
-  <p><em>PHP with SQL</em></p>
-  <p><em>Python</em>, OU. Algorithms and data structures,</p>
-  <p><em>Java and Netbeans</em>, OU. My first language! OOP and the full development cycle</p>
-  <p><em>XHTML</em>, OU.</p>
-<h2>Unrelated Skills</h2>
-  <p><em>Landscape Painting</em></p>
-  <p><em>Guitar playing</em></p>
-<h2>Personal Attributes</h2>
-  <p>Eager learner, who is still learning, this CV should grow over-time. I really need a back end language to work with and specialise in</p>
-  <p>No anger issues</p>
+  <nav class="main_fixed_nav">
+    <a href="#home" class="site_name">Joe Weston</a>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+  </nav>
+  <a name="home" class="anchor"></a>
+  <section class="splash_page">
+    <div class="splash_text_wrapper">
+      <h1>Prospective front end developer</h1>
+      <h2>HTML CSS JavaScrypt JQuery Ruby Git React.JS</h2>
+    </div>
+    <div class="grid_example">
+      <div></div> <div></div> <div></div> <div></div> <div></div>
+      <div></div> <div></div> <div></div> <div></div> <div></div>
+      <div></div>
+    </div>
+    <footer>
+      <div class="circle"><i class="fa fa-angle-double-down"></i></div>
+    </footer>
 
-<h1>Project Examples</h1>
-<div class="card_grid">
-  <div class="card">
-    <figure>
-      <a href="https://joeeeeeeeeeeeee.github.io/react_sketch/">
-        <img src="assets/images/react_sketch.png">
-      </a>
-      <figcaption>React Sketch</figcaption>
-      <p>This is a version of Etch-a-Sketch built with the framework React.JS</p>
-    </figure>
-  </div>
-  <div class="card">
-    <figure>
-      <a href="https://joeeeeeeeeeeeee.github.io/lightbox/">
-        <img src="assets/images/lightbox.jpg">
-      </a>
-      <figcaption>Lightbox</figcaption>
-      <p>An example of a responsive lightbox gallery using a third party lightbox api and utilizing image compression for optimum performance</p>
-    </figure>
-  </div>
-  <div class="card">
-    <figure>
-      <a href="https://joeeeeeeeeeeeee.github.io/pomodoro">
-        <img src="assets/images/pomodoro_clock.png">
-      </a>
-      <figcaption>Pomodoro Clock</figcaption>
-      <p>A simple timer app created using pure JavaScript (ES6) and the HTML DOM</p>
-    </figure>
-  </div>
-  <div class="card">
-    <figure>
-      <a href="https://joeeeeeeeeeeeee.github.io/converter/">
-        <img src="assets/images/converter.png">
-      </a>
-      <figcaption>Unit Converter</figcaption>
-      <p>A JQuery app with custom radio buttons</p>
-    </figure>
-  </div>
-  <div class="card">
-    <figure>
-      <a href="https://joeeeeeeeeeeeee.github.io/youtube-clone/">
-        <img src="assets/images/youtube_clone.png">
-      </a>
-      <figcaption>Youtube Clone</figcaption>
-      <p>A non-responsive (desktop only) clone of typical Youtube page using floating positioning rather than grid or flex-box with embedded video</p>
-    </figure>
-  </div>
-  <div class="card">
-    <figure>
-      <a href="https://repl.it/@joe111/TicTacToe">
-        <img src="assets/images/tic_tac_toe_ruby.png">
-      </a>
-      <figcaption>Tic-Tac-Toe (live)</figcaption>
-      <p>An OOP command-line version of Tic-tac-toe in Ruby.</p>
-    </figure>
-  </div>
-<div>
+  </section>
+  <a name="about" class="anchor"></a>
+  <section id="page_container">
+    <div class="mobile_only">
+      <h1>Joe Weston, Web Developer</h1>
+      <p>Mobile Version of Portfolio</p>
+    </div>
+    <h2>A little about Me:</h2>
+      <p>I am a prospective web developer, in search of a new career. I am currently spending most of my time off from working in a coffee-shop expanding my knowledge in web development</p>
+    <h2>Skills/Qualifications</h2>
+      <p><em>I don't have</em> a degree in computer science!</p>
+      <p><em>Diploma of higher education in computer science</em> equivalent to the first two years of university - from the OU (Open University)</p>
+      <p><em>Java-script,</em> Able to utilise higher order functions ( i.e. reduce() ), it's strange OOP and the new ES6 features - whilst being wary how function breaks JQuery's $(this)</p>
+      <p><em>HTML5 and CSS3,</em> grid, flex-box, media-queries (try resizing this page<span id="egg"></span>)and new HTML tags.</p>
+      <p><em>JQuery</em>, although I can live without it thanks to HTML5</p>
+      <p><em>Ruby</em>, Same knowledge as JS. I have also used it with the Rails MVC framework along with postgreSQL - although the lack of Junior Ruby roles has put me off this route. I wouldn't call myself a back-end developer yet though, the SQL exposure is minimal with this framework and I'm not actively using Rails.</p>
+      <p><em>Git</em> version control via the command-line or via plug-ins to IDEs.</p>
+      <p><em>Gimp, image manipulation</em>. Because Photoshop is expensive</p>
+      <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
+      <p><em>React.js</em> Currently learning and really enjoying<p>
+    <h2>Knowledge I have known that has become ever so rusty due to lack of use</h2>
+      <p><em>PHP with SQL</em></p>
+      <p><em>Python</em>, OU. Algorithms and data structures,</p>
+      <p><em>Java and Netbeans</em>, OU. My first language! OOP and the full development cycle</p>
+      <p><em>XHTML</em>, OU.</p>
+    <h2>Unrelated Skills</h2>
+      <p><em>Landscape Painting</em></p>
+      <p><em>Guitar playing</em></p>
+    <h2>Personal Attributes</h2>
+      <p>Eager learner, who is still learning, this CV should grow over-time. I really need a back end language to work with and specialise in</p>
+      <p>No anger issues</p>
+    <a name="projects" class="anchor"></a>
+    <h1>Project Examples</h1>
+    <div class="card_grid">
+      <div class="card">
+        <figure>
+          <a href="https://joeeeeeeeeeeeee.github.io/react_sketch/">
+            <img src="assets/images/react_sketch.png">
+          </a>
+          <figcaption>React Sketch</figcaption>
+          <p>This is a version of Etch-a-Sketch built with the framework React.JS</p>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
+          <a href="https://joeeeeeeeeeeeee.github.io/lightbox/">
+            <img src="assets/images/lightbox.jpg">
+          </a>
+          <figcaption>Lightbox</figcaption>
+          <p>An example of a responsive lightbox gallery using a third party lightbox api and utilizing image compression for optimum performance</p>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
+          <a href="https://joeeeeeeeeeeeee.github.io/pomodoro">
+            <img src="assets/images/pomodoro_clock.png">
+          </a>
+          <figcaption>Pomodoro Clock</figcaption>
+          <p>A simple timer app created using pure JavaScript (ES6) and the HTML DOM</p>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
+          <a href="https://joeeeeeeeeeeeee.github.io/converter/">
+            <img src="assets/images/converter.png">
+          </a>
+          <figcaption>Unit Converter</figcaption>
+          <p>A JQuery app with custom radio buttons</p>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
+          <a href="https://joeeeeeeeeeeeee.github.io/youtube-clone/">
+            <img src="assets/images/youtube_clone.png">
+          </a>
+          <figcaption>Youtube Clone</figcaption>
+          <p>A non-responsive (desktop only) clone of typical Youtube page using floating positioning rather than grid or flex-box with embedded video</p>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
+          <a href="https://repl.it/@joe111/TicTacToe">
+            <img src="assets/images/tic_tac_toe_ruby.png">
+          </a>
+          <figcaption>Tic-Tac-Toe (live)</figcaption>
+          <p>An OOP command-line version of Tic-tac-toe in Ruby.</p>
+        </figure>
+      </div>
+    <div>
+  </section>
 
 
 </body>
