--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section class="splash_page">
     <div class="splash_text_wrapper">
       <h1>Prospective front end developer</h1>
-      <h2>HTML CSS JavaScrypt JQuery Ruby Git React.JS</h2>
+      <h2>HTML CSS JavaScrypt JQuery Ruby Git Node.js React.JS Express.JS</h2>
     </div>
     <div class="grid_example">
       <div></div> <div></div> <div></div> <div></div> <div></div>
@@ -28,7 +28,7 @@
       <div></div>
     </div>
     <footer>
-      <div class="circle"><i class="fa fa-angle-double-down"></i></div>
+      <div class="circle"><a href="#about"><i class="fa fa-angle-double-down"></i></a></div>
     </footer>
 
   </section>
@@ -39,7 +39,7 @@
       <p>Mobile Version of Portfolio</p>
     </div>
     <h2>A little about Me:</h2>
-      <p>I am a prospective web developer, in search of a new career. I am currently spending most of my time off from working in a coffee-shop expanding my knowledge in web development</p>
+      <p>I am a prospective web developer, in search of a new career. I am currently spending most of my time off from work expanding my knowledge in web development</p>
     <h2>Skills/Qualifications</h2>
       <p><em>I don't have</em> a degree in computer science!</p>
       <p><em>Diploma of higher education in computer science</em> equivalent to the first two years of university - from the OU (Open University)</p>
@@ -50,7 +50,7 @@
       <p><em>Git</em> version control via the command-line or via plug-ins to IDEs.</p>
       <p><em>Gimp, image manipulation</em>. Because Photoshop is expensive</p>
       <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
-      <p><em>React.js</em> Currently learning and really enjoying<p>
+      <p><em>Node.js, React.js, Express.Js, MongoDB</em> Currently learning<p>
     <h2>Knowledge I have known that has become ever so rusty due to lack of use</h2>
       <p><em>PHP with SQL</em></p>
       <p><em>Python</em>, OU. Algorithms and data structures,</p>
@@ -61,7 +61,6 @@
       <p><em>Guitar playing</em></p>
     <h2>Personal Attributes</h2>
       <p>Eager learner, who is still learning, this CV should grow over-time. I really need a back end language to work with and specialise in</p>
-      <p>No anger issues</p>
     <a name="projects" class="anchor"></a>
     <h1>Project Examples</h1>
     <div class="card_grid">
