Added project and removed the hideus animation

--- a/index.html
+++ b/index.html
@@ -66,11 +66,20 @@
     <div class="card_grid">
       <div class="card">
         <figure>
+          <a href="https://joeeeeeeeeeeeee.github.io/react_quiz/">
+            <img src="assets/images/react_quiz.png" alt="screenshot of project">
+          </a>
+          <figcaption>React Quiz</figcaption>
+          <p>A quiz built using React.JS with Bootstrap 4</p>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
           <a href="https://joeeeeeeeeeeeee.github.io/react_sketch/">
             <img src="assets/images/react_sketch.png" alt="screenshot of project">
           </a>
           <figcaption>React Sketch</figcaption>
-          <p>This is a version of Etch-a-Sketch built with the framework React.JS</p>
+          <p>This is a version of Etch-a-Sketch built with React.JS</p>
         </figure>
       </div>
       <div class="card">
