--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
       <div class="card">
         <figure>
-          <a href="https://joewestone.github.io/react_sketch/">
+          <a href="https://joeweston.github.io/react_sketch/">
             <img src="assets/images/react_sketch.png" alt="screenshot of project">
           </a>
           <figcaption>React Sketch</figcaption>
