Added badly named game

--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
     <div class="card_grid">
       <div class="card">
         <figure>
-          <a href="https://joeeeeeeeeeeeee.github.io/react_quiz/">
+          <a href="https://joeweston.github.io/treasureHands/">
+            <img src="assets/images/treasureHands.png" alt="screenshot of project">
+          </a>
+          <figcaption>Treasure Hands</figcaption>
+          <p>A fully working JQuery browser based game. With dynamic map, and tons of loot</p>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
+          <a href="https://joeweston.github.io/react_quiz/">
             <img src="assets/images/react_quiz.png" alt="screenshot of project">
           </a>
           <figcaption>React Quiz</figcaption>
@@ -75,7 +84,7 @@
       </div>
       <div class="card">
         <figure>
-          <a href="https://joeeeeeeeeeeeee.github.io/react_sketch/">
+          <a href="https://joeweston.github.io/react_sketch/">
             <img src="assets/images/react_sketch.png" alt="screenshot of project">
           </a>
           <figcaption>React Sketch</figcaption>
@@ -84,7 +93,7 @@
       </div>
       <div class="card">
         <figure>
-          <a href="https://joeeeeeeeeeeeee.github.io/lightbox/">
+          <a href="https://joeweston.github.io/lightbox/">
             <img src="assets/images/lightbox.jpg" alt="screenshot of project">
           </a>
           <figcaption>Lightbox</figcaption>
@@ -93,7 +102,7 @@
       </div>
       <div class="card">
         <figure>
-          <a href="https://joeeeeeeeeeeeee.github.io/pomodoro">
+          <a href="https://joeweston.github.io/pomodoro">
             <img src="assets/images/pomodoro_clock.png" alt="screenshot of project">
           </a>
           <figcaption>Pomodoro Clock</figcaption>
@@ -102,7 +111,7 @@
       </div>
       <div class="card">
         <figure>
-          <a href="https://joeeeeeeeeeeeee.github.io/converter/">
+          <a href="https://joeweston.github.io/converter/">
             <img src="assets/images/converter.png" alt="screenshot of project">
           </a>
           <figcaption>Unit Converter</figcaption>
@@ -111,7 +120,7 @@
       </div>
       <div class="card">
         <figure>
-          <a href="https://joeeeeeeeeeeeee.github.io/youtube-clone/">
+          <a href="https://joeweston.github.io/youtube-clone/">
             <img src="assets/images/youtube_clone.png" alt="screenshot of project">
           </a>
           <figcaption>Youtube Clone</figcaption>
