Added Multiple border generator

--- a/index.html
+++ b/index.html
@@ -66,11 +66,20 @@
     <div class="card_grid">
       <div class="card">
         <figure>
+          <a href="https://joeweston.github.io/borderGenerator/">
+            <img src="assets/images/borderGenerator.png" alt="screenshot of project">
+          </a>
+          <figcaption>Muliple border Generator</figcaption>
+          <p>A CSS tool designing muliple borders for HTML elements using box shadow.</p>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
           <a href="https://joeweston.github.io/treasureHands/">
             <img src="assets/images/treasureHands.png" alt="screenshot of project">
           </a>
           <figcaption>Treasure Hands</figcaption>
-          <p>A fully working JQuery browser based game. With dynamic map, and tons of loot</p>
+          <p>A fully working JQuery browser based game. With dynamic map, and tons of loot.</p>
         </figure>
       </div>
       <div class="card">
