Removed react etch as it was too tacky

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a href="https://joeweston.github.io/borderGenerator/">
             <img src="assets/images/borderGenerator.png" alt="screenshot of project">
           </a>
-          <figcaption>Muliple border Generator</figcaption>
+          <figcaption>Multiple border Generator</figcaption>
           <p>A CSS tool designing muliple borders for HTML elements using box shadow.</p>
         </figure>
       </div>
