--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
       <p><em>I don't have</em> a degree in computer science!</p>
       <p><em>Diploma of higher education in computer science</em> equivalent to the first two years of university - from the OU (Open University)</p>
       <p><em>Java-script,</em> Able to utilise higher order functions ( i.e. reduce() ), it's strange OOP and the new ES6 features - whilst being wary how function breaks JQuery's $(this)</p>
-      <p><em>HTML5 and CSS3,</em> grid, flex-box, media-queries (try resizing this page<span id="egg"></span>) and new HTML tags.</p>
+      <p><em>HTML5 and CSS3/SCSS,</em> grid, flex-box, media-queries (try resizing this page<span id="egg"></span>) and new HTML tags.</p>
       <p><em>JQuery</em>, although I can live without it thanks to HTML5</p>
       <p><em>Ruby</em>, Same knowledge as JS. I have also used it with the Rails MVC framework along with postgreSQL - although the lack of Junior Ruby roles has put me off this route. I wouldn't call myself a back-end developer yet though, the SQL exposure is minimal with this framework and I'm not actively using Rails.</p>
       <p><em>Git</em> version control via the command-line or via plug-ins to IDEs.</p>
       <p><em>Gimp, image manipulation</em>. Because Photoshop is expensive</p>
       <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
-      <p><em>Server-Side Technologies Node.js, React.js*, Express.Js, MongoDB</em><p>
+      <p><em>Build Tools</em> NPM, Webbpack 4<p>
+      <p><em>Other Technologies Node.js, React.js, Express.Js, MongoDB</em><p>
     <h2>Knowledge I have known that has become ever so rusty due to lack of use</h2>
       <p><em>PHP with SQL</em></p>
       <p><em>Python</em>, OU. Algorithms and data structures,</p>
@@ -73,6 +74,17 @@
           <p>A CSS tool designing muliple borders for HTML elements using box shadow.</p>
         </figure>
       </div>
+
+        <div class="card">
+        <figure>
+          <a href="https://joeweston.github.io/insetManipulator/">
+            <img src="assets/images/insetManipulator.png" alt="screenshot of project">
+          </a>
+          <figcaption>Inset manipulaor</figcaption>
+          <p>Similar to the border generator, this version allows insets to be easily mainipuled (without the math) to create multiple borders on specific sides of an element</p>
+        </figure>
+      </div>
+
       <div class="card">
         <figure>
           <a href="https://joeweston.github.io/treasureHands/">
@@ -82,6 +94,7 @@
           <p>A fully working JQuery browser based game. With dynamic map, and tons of loot.</p>
         </figure>
       </div>
+
       <div class="card">
         <figure>
           <a href="https://joeweston.github.io/react_quiz/">
@@ -89,6 +102,16 @@
           </a>
           <figcaption>React Quiz</figcaption>
           <p>A quiz built using React.JS with Bootstrap 4</p>
+        </figure>
+      </div>
+
+      <div class="card">
+        <figure>
+          <a href="https://joeweston.github.io/npmCheatsheet/">
+            <img src="assets/images/npmCheatsheet.png" alt="screenshot of project">
+          </a>
+          <figcaption>NPM Cheatsheet</figcaption>
+          <p>This is a cheetsheet I've created for easy project setups for using NPM and Webpack 4</p>
         </figure>
       </div>
       <div class="card">
