Added egg timers vue

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <p><em>Git</em> version control via the command-line or via plug-ins to IDEs.</p>
       <p><em>Gimp, image manipulation</em>. Because Photoshop is expensive</p>
       <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
+      <p><em>Vue.js</em><p>
       <p><em>Build Tools</em> NPM, Webbpack 4<p>
       <p><em>Other Technologies Node.js, React.js, Express.Js, MongoDB</em><p>
     <h2>Knowledge I have known that has become ever so rusty due to lack of use</h2>
@@ -64,7 +65,22 @@
       <p>Eager learner, who is still learning, this CV should grow over-time. I really need a back end language to work with and specialise in</p>
     <a id="anchor_projects" class="anchor"></a>
     <h1>Project Examples</h1>
+
+
+
+
     <div class="card_grid">
+
+      <div class="card">
+        <figure>
+          <a href="https://joeweston.github.io/egg_timers_vue/">
+            <img src="assets/images/eggTimersVue.png" alt="screenshot of project">
+          </a>
+          <figcaption>Vue.js Egg Timer</figcaption>
+          <p>Written in Vue.js, this app can create any number of custom egg timers, each can have their timers set.</p>
+        </figure>
+      </div>
+
       <div class="card">
         <figure>
           <a href="https://joeweston.github.io/borderGenerator/">
