--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section class="splash_page">
     <div class="splash_text_wrapper">
       <h1>Prospective front end developer</h1>
-      <h2>HTML CSS JavaScrypt JQuery Ruby Git Node.js React.JS Express.JS</h2>
+      <h2>HTML CSS JavaScrypt JQuery Ruby Git Node.js Vue.js</h2>
     </div>
     <div class="grid_example">
       <div></div> <div></div> <div></div> <div></div> <div></div>
@@ -43,21 +43,22 @@
     <h2>Skills/Qualifications</h2>
       <p><em>I don't have</em> a degree in computer science!</p>
       <p><em>Diploma of higher education in computer science</em> equivalent to the first two years of university - from the OU (Open University)</p>
-      <p><em>Java-script,</em> Able to utilise higher order functions ( i.e. reduce() ), it's strange OOP and the new ES6 features - whilst being wary how function breaks JQuery's $(this)</p>
+      <p><em>Java-script,</em> OOP and ES6</p>
       <p><em>HTML5 and CSS3/SCSS,</em> grid, flex-box, media-queries (try resizing this page<span id="egg"></span>) and new HTML tags.</p>
-      <p><em>JQuery</em>, although I can live without it thanks to HTML5</p>
-      <p><em>Ruby</em>, Same knowledge as JS. I have also used it with the Rails MVC framework along with postgreSQL - although the lack of Junior Ruby roles has put me off this route. I wouldn't call myself a back-end developer yet though, the SQL exposure is minimal with this framework and I'm not actively using Rails.</p>
+      <p><em>JQuery</em></p>
       <p><em>Git</em> version control via the command-line or via plug-ins to IDEs.</p>
       <p><em>Gimp, image manipulation</em>. Because Photoshop is expensive</p>
       <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
       <p><em>Vue.js</em><p>
+      <p><em>React.js</em>
       <p><em>Build Tools</em> NPM, Webbpack 4<p>
-      <p><em>Other Technologies Node.js, React.js, Express.Js, MongoDB</em><p>
-    <h2>Knowledge I have known that has become ever so rusty due to lack of use</h2>
+      <p><em>Node.js / Babel</em><p>
+    <h2>Skills not in current use (most recent first)</h2>
+      <p><em>Express.Js / MongoDB</em></p>
+      <p><em>Ruby / Rails</em>,
       <p><em>PHP with SQL</em></p>
       <p><em>Python</em>, OU. Algorithms and data structures,</p>
       <p><em>Java and Netbeans</em>, OU. My first language! OOP and the full development cycle</p>
-      <p><em>XHTML</em>, OU.</p>
     <h2>Unrelated Skills</h2>
       <p><em>Landscape Painting</em></p>
       <p><em>Guitar playing</em></p>
