--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
       <p><em>Vue.js</em><p>
       <p><em>React.js</em>
-      <p><em>Build Tools</em> NPM, Webbpack 4<p>
+      <p><em>Build Tools</em> NPM, Webpack 4<p>
       <p><em>Node.js / Babel</em><p>
     <h2>Skills not in current use (most recent first)</h2>
       <p><em>Express.Js / MongoDB</em></p>
