Added vue j border generator

--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
 
       <div class="card">
         <figure>
+          <a href="https://joeweston.github.io/border_generator_vue/">
+            <img src="assets/images/border_generator_vue.png" alt="screenshot of project">
+          </a>
+          <figcaption>Vue.js Border Generator</figcaption>
+          <p>Written in Vue.js, this app is used to generate css whilst utilising an external color-picker component library.</p>
+        </figure>
+      </div>
+
+      <div class="card">
+        <figure>
           <a href="https://joeweston.github.io/egg_timers_vue/">
             <img src="assets/images/eggTimersVue.png" alt="screenshot of project">
           </a>
