--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section class="splash_page">
     <div class="splash_text_wrapper">
       <h1>Prospective front end developer</h1>
-      <h2>HTML CSS JavaScrypt JQuery Ruby Git Node.js Vue.js</h2>
+      <h2>HTML CSS JavaScrypt JQuery PHP Git Node.js Vue.js</h2>
     </div>
     <div class="grid_example">
       <div></div> <div></div> <div></div> <div></div> <div></div>
@@ -48,15 +48,15 @@
       <p><em>JQuery</em></p>
       <p><em>Git</em> version control via the command-line or via plug-ins to IDEs.</p>
       <p><em>Gimp, image manipulation</em>. Because Photoshop is expensive</p>
-      <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em><p>
-      <p><em>Vue.js</em><p>
-      <p><em>React.js</em>
-      <p><em>Build Tools</em> NPM, Webpack 4<p>
-      <p><em>Node.js / Babel</em><p>
+      <p><em>Mac OS terminal/bash, Windows, Sublime Text, Atom, Notepad++, Chrome Developer Tools and Others</em></p>
+      <p><em>Vue.js</em></p>
+      <p><em>React.js</em></p>
+      <p><em>Build Tools</em> NPM, Webpack 4</p>
+      <p><em>Node.js / Babel</em></p>
+      <p><em>PHP</em>, Laravel.</p>
     <h2>Skills not in current use (most recent first)</h2>
       <p><em>Express.Js / MongoDB</em></p>
       <p><em>Ruby / Rails</em>,
-      <p><em>PHP with SQL</em></p>
       <p><em>Python</em>, OU. Algorithms and data structures,</p>
       <p><em>Java and Netbeans</em>, OU. My first language! OOP and the full development cycle</p>
     <h2>Unrelated Skills</h2>
